k8s/app/namespace.yaml
# ArgoCD Application 의 destination.namespace 와 같아야 합니다.
apiVersion: v1
kind: Namespace
metadata:
  name: web
